--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <hr size="5" noshade>
   <table>
     <tr>
-      <td><img src="C:\Users\YESVEER SINGH\OneDrive\Pictures\icon.png" alt="Do Not Find on Internet"></td>
+      <td><img src="20210306_020346_0000.png" alt="Do Not Find on Internet"></td>
     </tr>
     <tr>
       <td><h1>Kaal Bhairav</h1><p><em>A Black Hat<strong><a href="https://github.com/kaal-bhairav-cpu"> Hacker</a> </strong></em></p></td>
